--- a/index.html
+++ b/index.html
@@ -2,138 +2,204 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Real-Time Location Sharing Without Map</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Peer-to-Peer Real-Time Location Share</title>
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+  />
+  <style>
+    #map { height: 400px; width: 100%; margin-top: 20px; }
+    textarea { width: 100%; height: 100px; }
+    button { margin: 5px 0; }
+  </style>
 </head>
-<body class="bg-gray-100 text-gray-900">
-  <div class="max-w-xl mx-auto p-4 space-y-4">
-    <h1 class="text-2xl font-bold text-center">Real-Time Location Sharing</h1>
-    <div id="create-section" class="text-center">
-      <button id="createLink" class="bg-blue-600 text-white px-4 py-2 rounded">Create Share Link</button>
-      <div id="shareURL" class="mt-4 text-sm text-gray-600 break-all"></div>
-    </div>
-    <div id="status" class="text-gray-700 text-center text-lg"></div>
-  </div>
+<body>
+  <h1>Peer-to-Peer Location Sharing (No Backend)</h1>
+  <p>
+    <strong>Step 1:</strong> User A clicks "Create Offer" and shares the offer text with User B.<br />
+    <strong>Step 2:</strong> User B pastes offer below, clicks "Create Answer", shares answer with User A.<br />
+    <strong>Step 3:</strong> User A pastes answer below, clicks "Set Answer".<br />
+    Then both see each other's live locations on the map.
+  </p>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-    import { getFirestore, doc, setDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
+  <button id="createOfferBtn">Create Offer</button>
+  <textarea id="offer" placeholder="Offer will appear here or paste offer here"></textarea>
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyCpcaq3LVGUpqrF1W-2TeJqFfLORnrEuFw",
-      authDomain: "anuu-ffa56.firebaseapp.com",
-      projectId: "anuu-ffa56",
-      storageBucket: "anuu-ffa56.firebasestorage.app",
-      messagingSenderId: "408039643794",
-      appId: "1:408039643794:web:008f55e0f8a3a57041a44b",
-      measurementId: "G-MKF1CLRTSF"
-    };
+  <button id="createAnswerBtn">Create Answer</button>
+  <textarea id="answer" placeholder="Answer will appear here or paste answer here"></textarea>
 
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
+  <button id="setAnswerBtn">Set Answer</button>
 
-    const params = new URLSearchParams(window.location.search);
-    const sessionId = params.get('session');
+  <div id="status"></div>
 
-    const createLinkBtn = document.getElementById('createLink');
-    const shareURLDiv = document.getElementById('shareURL');
+  <div id="map"></div>
+
+  <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
+  <script>
+    let pc = null;
+    let dataChannel = null;
     const statusDiv = document.getElementById('status');
 
-    function generateId(length = 6) {
-      const chars = 'abcdefghijklmnopqrstuvwxyz0123456789';
-      return Array.from({length}, () => chars[Math.floor(Math.random() * chars.length)]).join('');
+    // Map setup with Leaflet
+    const map = L.map('map').setView([0, 0], 2);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 19,
+    }).addTo(map);
+
+    let myMarker = null;
+    let friendMarker = null;
+
+    function updateMyMarker(lat, lng) {
+      if (!myMarker) {
+        myMarker = L.marker([lat, lng], {title: 'You'}).addTo(map);
+        map.setView([lat, lng], 15);
+      } else {
+        myMarker.setLatLng([lat, lng]);
+      }
     }
 
-    function updateDistance(myLoc, friendLoc) {
-      if (!myLoc || !friendLoc) return '';
-      const R = 6371e3; // meters
-      const φ1 = myLoc.lat * Math.PI/180;
-      const φ2 = friendLoc.lat * Math.PI/180;
-      const Δφ = (friendLoc.lat - myLoc.lat) * Math.PI/180;
-      const Δλ = (friendLoc.lng - myLoc.lng) * Math.PI/180;
-      const a = Math.sin(Δφ/2) * Math.sin(Δφ/2) +
-                Math.cos(φ1) * Math.cos(φ2) *
-                Math.sin(Δλ/2) * Math.sin(Δλ/2);
-      const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a));
-      const d = R * c;
-      return d.toFixed(1);
+    function updateFriendMarker(lat, lng) {
+      if (!friendMarker) {
+        friendMarker = L.marker([lat, lng], {title: 'Friend', icon: L.icon({
+          iconUrl: 'https://maps.google.com/mapfiles/ms/icons/red-dot.png',
+          iconSize: [32, 32],
+          iconAnchor: [16, 32]
+        })}).addTo(map);
+      } else {
+        friendMarker.setLatLng([lat, lng]);
+      }
     }
 
-    if (!sessionId) {
-      // Show create link button & logic
-      createLinkBtn.addEventListener('click', () => {
-        const id = generateId();
-        const url = `${window.location.origin}${window.location.pathname}?session=${id}`;
-        shareURLDiv.innerHTML = `
-          <p class="mb-2">Share this link with your friend:</p>
-          <div class="bg-white p-2 rounded border break-all">${url}</div>
-          <p class="mt-4 font-semibold">Waiting for friend's location...</p>
-        `;
+    function logStatus(msg) {
+      statusDiv.textContent = msg;
+    }
 
-        navigator.geolocation.getCurrentPosition(pos => {
-          const myLatLng = { lat: pos.coords.latitude, lng: pos.coords.longitude };
-          const friendDoc = doc(db, 'sessions', id);
-
-          onSnapshot(friendDoc, docSnap => {
-            if (!docSnap.exists()) {
-              statusDiv.textContent = 'Friend has not shared location yet.';
-              return;
-            }
-            const data = docSnap.data();
-            if (!data.lat || !data.lng) {
-              statusDiv.textContent = 'Friend location data missing.';
-              return;
-            }
-            const friendLatLng = { lat: data.lat, lng: data.lng };
-            const dist = updateDistance(myLatLng, friendLatLng);
-            const lastUpdated = data.timestamp ? new Date(data.timestamp).toLocaleTimeString() : 'unknown';
-
-            statusDiv.innerHTML = `
-              <p>Your Location: ${myLatLng.lat.toFixed(5)}, ${myLatLng.lng.toFixed(5)}</p>
-              <p>Friend's Location: ${friendLatLng.lat.toFixed(5)}, ${friendLatLng.lng.toFixed(5)}</p>
-              <p>Friend's last update: ${lastUpdated}</p>
-              <p>Distance between you: ${dist} meters</p>
-            `;
-          });
-        }, err => {
-          alert("Location permission is required.");
-        }, { enableHighAccuracy: true });
-
+    // Setup RTCPeerConnection and Data Channel
+    function createPeerConnection() {
+      pc = new RTCPeerConnection({
+        iceServers: [{ urls: "stun:stun.l.google.com:19302" }]
       });
-    } else {
-      // Friend side: update location continuously
-      document.getElementById('create-section').style.display = 'none';
-      statusDiv.textContent = 'Sharing your live location...';
 
-      const friendDoc = doc(db, 'sessions', sessionId);
+      pc.onicecandidate = event => {
+        if (event.candidate === null) {
+          // ICE gathering finished
+          logStatus('ICE gathering complete.');
+        }
+      };
 
-      navigator.geolocation.getCurrentPosition(pos => {
-        const myLatLng = { lat: pos.coords.latitude, lng: pos.coords.longitude };
+      pc.ondatachannel = event => {
+        dataChannel = event.channel;
+        setupDataChannel();
+      };
+    }
 
-        // Start watching position and update Firestore
-        navigator.geolocation.watchPosition(position => {
-          const { latitude, longitude } = position.coords;
-          const timestamp = new Date().toISOString();
+    // Setup handlers on data channel
+    function setupDataChannel() {
+      dataChannel.onopen = () => logStatus('Data channel open. Sharing locations...');
+      dataChannel.onclose = () => logStatus('Data channel closed.');
+      dataChannel.onerror = e => logStatus('Data channel error: ' + e);
+      dataChannel.onmessage = e => {
+        try {
+          const loc = JSON.parse(e.data);
+          if (loc.lat && loc.lng) {
+            updateFriendMarker(loc.lat, loc.lng);
+          }
+        } catch(err) {
+          console.error('Invalid data received', err);
+        }
+      };
+    }
 
-          setDoc(friendDoc, {
-            lat: latitude,
-            lng: longitude,
-            timestamp
-          }, { merge: true }).catch(e => {
-            statusDiv.textContent = "Error updating location.";
-          });
+    // Send location to friend
+    function sendLocation(position) {
+      if (dataChannel && dataChannel.readyState === 'open') {
+        const loc = {
+          lat: position.coords.latitude,
+          lng: position.coords.longitude
+        };
+        dataChannel.send(JSON.stringify(loc));
+        updateMyMarker(loc.lat, loc.lng);
+      }
+    }
 
-          statusDiv.textContent = `Location updated at ${new Date(timestamp).toLocaleTimeString()}`;
-
-        }, err => {
-          statusDiv.textContent = 'Error getting location updates: ' + err.message;
-        }, { enableHighAccuracy: true, maximumAge: 1000, timeout: 5000 });
-
-      }, err => {
-        alert("Location permission is required.");
+    // Watch position and send updates
+    function startLocationSharing() {
+      if (!navigator.geolocation) {
+        alert('Geolocation not supported');
+        return;
+      }
+      navigator.geolocation.watchPosition(sendLocation, e => {
+        alert('Error getting location: ' + e.message);
       }, { enableHighAccuracy: true });
     }
+
+    // Elements
+    const createOfferBtn = document.getElementById('createOfferBtn');
+    const offerTextarea = document.getElementById('offer');
+    const createAnswerBtn = document.getElementById('createAnswerBtn');
+    const answerTextarea = document.getElementById('answer');
+    const setAnswerBtn = document.getElementById('setAnswerBtn');
+
+    createOfferBtn.onclick = async () => {
+      createPeerConnection();
+      dataChannel = pc.createDataChannel('location');
+      setupDataChannel();
+
+      const offer = await pc.createOffer();
+      await pc.setLocalDescription(offer);
+
+      // Wait for ICE gathering to complete
+      await new Promise(resolve => {
+        if (pc.iceGatheringState === 'complete') resolve();
+        else {
+          pc.onicegatheringstatechange = () => {
+            if (pc.iceGatheringState === 'complete') resolve();
+          };
+        }
+      });
+
+      offerTextarea.value = JSON.stringify(pc.localDescription);
+      logStatus('Offer created. Send it to your friend.');
+    };
+
+    createAnswerBtn.onclick = async () => {
+      if (!offerTextarea.value) {
+        alert('Paste offer JSON first.');
+        return;
+      }
+
+      createPeerConnection();
+
+      const offer = JSON.parse(offerTextarea.value);
+      await pc.setRemoteDescription(offer);
+
+      const answer = await pc.createAnswer();
+      await pc.setLocalDescription(answer);
+
+      // Wait for ICE gathering to complete
+      await new Promise(resolve => {
+        if (pc.iceGatheringState === 'complete') resolve();
+        else {
+          pc.onicegatheringstatechange = () => {
+            if (pc.iceGatheringState === 'complete') resolve();
+          };
+        }
+      });
+
+      answerTextarea.value = JSON.stringify(pc.localDescription);
+      logStatus('Answer created. Send it back to the offerer.');
+    };
+
+    setAnswerBtn.onclick = async () => {
+      if (!answerTextarea.value) {
+        alert('Paste answer JSON first.');
+        return;
+      }
+      const answer = JSON.parse(answerTextarea.value);
+      await pc.setRemoteDescription(answer);
+      logStatus('Connection established! Starting location sharing...');
+      startLocationSharing();
+    };
   </script>
 </body>
 </html>
